--- a/aiffel-front-test/src/App.css
+++ b/aiffel-front-test/src/App.css
@@ -1,38 +1,52 @@
-.App {
-  text-align: center;
+html, body {
+
+	margin: 0;
+
+	padding: 0;
+
+	height: 100%;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+button:hover{
+    cursor: pointer;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Footer{
+    bottom: 0;
+    height: 50px;
+    position: absolute;
+    align-items: center;
+    text-align: center;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    color: white;
+    background-color: #333333;
+}
+.ProfileBanner{
+    text-align: center;
+    padding-top: 3%;
+    font-size: 40px;
+    font-weight: bold;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.ProfileList{
+    margin-top: 2%;
+    height:244px;
+    max-height: 244px;
+    text-align: center;
 }
-
-.App-link {
-  color: #61dafb;
+.ProfileList .proImage{
+    float: left;
+    margin-left: 10%;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ProTextArea{
+    flex: 50%;
+}
+.ProTextArea li{
+    font-size: 20px;
+    font-weight: bold;
+    text-align: left;
 }
