--- a/aiffel-front-test/src/component/Nav.css
+++ b/aiffel-front-test/src/component/Nav.css
@@ -1,5 +1,5 @@
 .Navbar {
-    background-color: #021E39;
+    background-color: #333333;
     width: 100%;
     height: 80px;
     font-family: Arial, Helvetica, sans-serif;
@@ -82,7 +82,7 @@
         height: 230px;
         max-height: 230px;
         width: 100%;
-        background-color: #021E39;
+        background-color: #333333;
         display: flex;
         flex-direction: column;
         align-items: center;
