--- a/aiffel-front-test/src/App.css
+++ b/aiffel-front-test/src/App.css
@@ -71,3 +71,14 @@ button:hover{
     color:gray;
     padding: 5px;
 }
+.CreateBT{
+    text-align: right;
+    margin-bottom: 10px;
+}
+.CreateBT button{
+     border-radius: 5px;
+    border:1px solid gray;
+    background-color: rgba(0, 0, 0, 0);
+    color:gray;
+    padding: 5px;
+}
